--- a/styles/styles.css
+++ b/styles/styles.css
@@ -372,6 +372,13 @@ body {
 	margin-bottom: 60px;
 }
 
+#map {
+	width: 100%;
+	height: 400px;
+	height: 100%;
+	max-height: 423px;
+}
+
 /* Footer */
 .footer {
 	margin-bottom: 26px;
