--- a/styles/styles.css
+++ b/styles/styles.css
@@ -495,7 +495,7 @@ body {
 	top: 0;
 	right: 0;
 	bottom: 0;
-	z-index: 1000;
+	z-index: 10000;
 	background-color: rgba(0, 0, 0, 0.5);
 	cursor: pointer;
 	overflow-y: auto;
@@ -504,6 +504,7 @@ body {
 	opacity: 0;
 	visibility: hidden;
 	transition: all 0.3s;
+	padding: 0 15px;
 }
 
 .modal::before {
@@ -801,6 +802,14 @@ body {
 
 	.gallery__item:first-child {
 		grid-column: 1 / -1;
+	}
+
+	.modal__box {
+		padding: 34px 16px;
+	}
+
+	.modal__title {
+		margin-bottom: 36px;
 	}
 }
 
